# self-deploy

./: .dockerignore  .gitignore  Dockerfile.docs  Dockerfile.larek  clone.py  docker-compose.yaml  env.example  metrics.py  mkdocs.yml  process_repos.sh  pyproject.toml  readme.md  requirements-docs.txt  setup.sh
.github/workflows/: dock.yml  larek.yml
docs/: ansible-ci-cd.md  auto_repo_schema.md  build-format.md  index.md  init-steps.md  project-structure.md  pydantic-generator.md  report.md
gitlab-ansible-deployment/: .gitignore  README.md  ansible.cfg  docker-compose-cleanup.yml  docker-compose-playbook.yml  gitlab-backup.yml  gitlab-cleanup.yml  gitlab-password-reset.yml  gitlab-playbook.yml  gitlab-ssl-setup.yml  inventory.ini  requirements.yml
gitlab-ansible-deployment/group_vars/: all.yml  docker_compose.yml
gitlab-ansible-deployment/host_vars/: gitlab-host.yml
gitlab-ansible-deployment/scripts/: maintenance.sh
gitlab-ansible-deployment/templates/: gitlab.rb.j2
larek/: __init__.py  config.py  main.py
larek/analyzer/: __init__.py  base.py  go.py  java.py  javascript.py  kotlin.py  python.py  pythonlang.py  repo.py
larek/commands/: __init__.py  analyze.py  clear.py  clone.py  debug.py  docker.py  gitlab.py  init.py  login.py  status.py
larek/composer/: builder.py
larek/models/: __init__.py  repo.py
larek/pipeliner/: __init__.py  builder.py
larek/templates/: __init__.py  base.py  go.py  java.py  javascript.py  (+1 more)
scripts/: generate_repo_schema_docs.py
tests/: test_builder.py  test_pipeline.py  test_pipeliner.py  test_repo_collection.py
(+19 files in other folders)
